# infohub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/core/: atomreader.hpp  category.hpp  config.hpp  httpclient.hpp  jsonableinterface.hpp  language.hpp  news.hpp  readerinterface.hpp  rssreader.hpp  settings.hpp  source.hpp  utils.hpp  workerthread.hpp
include/ui/: contentview.hpp  loadingwidget.hpp  mainview.hpp  mainwindow.hpp  navigatewidget.hpp  newsitemlabels.hpp  newsitemwidget.hpp  settingswidgetcategories.hpp  settingswidgetform.hpp  settingswidgetitems.hpp  settingswidgetsources.hpp
resources/: config.json  resources.qrc
resources/lang/: en-us.json  pl-pl.json
src/core/: atomreader.cpp  category.cpp  config.cpp  httpclient.cpp  language.cpp  news.cpp  rssreader.cpp  settings.cpp  source.cpp  utils.cpp  workerthread.cpp
src/ui/: loadingwidget.cpp  mainview.cpp  mainwindow.cpp  navigatewidget.cpp  newsitemwidget.cpp  newswidget.cpp  settingswidget.cpp  settingswidgetcategories.cpp  settingswidgetform.cpp  settingswidgetitems.cpp  settingswidgetsources.cpp
